testing fix for reload on mobile

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -17,6 +17,7 @@
 }
 
 body {
+  overflow: hidden;
   image-rendering: pixelated;
   margin: 0;
   min-height: 100vh;
